🚑 (ux) Fix code blocks breaking small layout
Code blocks with `pre` white spacing were overflowing our small layout; making the parent they're
wrapped in `display: grid` restricts their growth and properly overflows as needed. Also fixes word
breaking in Safari for non-pre-wrapped code.

--- a/src/sass/components/_pre.scss
+++ b/src/sass/components/_pre.scss
@@ -25,6 +25,9 @@
     line-height: 1.45;
     outline: 0;
     padding: 1rem;
+    white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
   }
 }
 
